--- a/src/main/resources/templates/frontview/product.html
+++ b/src/main/resources/templates/frontview/product.html
@@ -128,7 +128,7 @@
                                             <div class="card-body">
                                                 <div class="card-title">
                                                     <h6 class="font-weight-bold text-warning text-center "><a    class="card-link text-warning" th:href="@{/public/single-product/{prodid}(prodid=${productlists.id})}" >  <span  th:text="${productlists.title}">    </span> </a></h6>
-                                                    <h6 class=""> <span class="font-weight-bold">Price:</span> <span  th:text="${productlists.price}">    </span> /-</h6>
+                                                    <h6 class=""> <span class="font-weight-bold">Price:</span> <span  th:text="${productlists.salesPrice}">    </span> /-</h6>
                                                 </div>
                                             </div>
                                         </div>
