--- a/src/main/resources/templates/frontview/single-product.html
+++ b/src/main/resources/templates/frontview/single-product.html
@@ -46,7 +46,7 @@
 
                                         <h5>  Category: <span  th:text="${product_details.title}">    </span></h5>
 
-                                        <h6>  Price: <span  th:text="${product_details.price}">    </span></h6>
+                                        <h6>  Price: <span  th:text="${product_details.salesPrice}">    </span></h6>
 
                                         <!--                                        <h6>  Discount: <span  th:text="${product_details.discount}">    </span></h6>-->
 
