--- a/src/main/resources/templates/cart/index.html
+++ b/src/main/resources/templates/cart/index.html
@@ -21,7 +21,7 @@
                         <div class="card row" >
                             <div class="card-header">
                                 <i class="fas fa-shopping-cart text-warning"></i>  Your cart
-<!--                                <span th:text="${session.sessioncart.size()}"></span>-->
+                                <!--                                <span th:text="${session.sessioncart.size()}"></span>-->
                             </div>
 
                             <div class="card-body">
@@ -49,26 +49,26 @@
                                         <tbody>
                                             <tr th:each="cart,status:${session.sessioncart}">
                                                 <th>1</th>
-                                                <td><a    class="card-link text-warning" th:href="@{/front-view/single-product/{prodid}(prodid=${cart.exam.id})}" >  <span  th:text="${cart.exam.title}">    </span> </a></td>
+                                                <td><a    class="card-link text-warning" th:href="@{/front-view/single-product/{prodid}(prodid=${cart.product.id})}" >  <span  th:text="${cart.product.title}">    </span> </a></td>
 
-                                                <td> <span th:if="${ not #strings.isEmpty(cart.exam.imageName)}" class="badge bg-green pull-right"> 
-                                                        <img  class="img-responsive" th:src="@{/files/}+${cart.exam.imageName}" width="100px"  height="100px"/>
+                                                <td> <span th:if="${ not #strings.isEmpty(cart.product.imageName)}" class="badge bg-green pull-right"> 
+                                                        <img  class="img-responsive" th:src="@{/files/}+${cart.product.imageName}" width="100px"  height="100px"/>
                                                     </span>
 
-                                                    <span th:if="${#strings.isEmpty(cart.exam.imageName)}" > Image Not Found </span></td>
+                                                    <span th:if="${#strings.isEmpty(cart.product.imageName)}" > Image Not Found </span></td>
 
-                                                <td th:text="${cart.exam.price}">Otto</td>
+                                                <td th:text="${cart.product.salesPrice}">Otto</td>
 
                                                 <td th:text="${cart.quantity}">Otto</td>
                                                 <td>
-                                                    <div th:with="result=${cart.exam.price * cart.quantity}">
+                                                    <div th:with="result=${cart.product.salesPrice * cart.quantity}">
 
                                                         <span th:text="${#numbers.formatDecimal(result, 0, 'COMMA', 2, 'POINT')}">10.00</span> 
 
                                                     </div>
                                                 </td>
 
-                                                <td class="text-center"><a th:href="@{/cart/remove/{id}(id=${cart.exam.id})}" > <i class="far fa-trash-alt text-danger"></i> </a></td>
+                                                <td class="text-center"><a th:href="@{/cart/remove/{id}(id=${cart.product.id})}" > Delete </a></td>
 
                                             </tr>
 
@@ -78,7 +78,7 @@
 
                             </div> 
                             <div class="card-footer"> 
-                                <a th:href="@{/front-view/all-exam}" type="button" class="btn btn-sm btn-success"> Continue Shopping</a>
+                                <a th:href="@{/public/product}" type="button" class="btn btn-sm btn-success"> Continue Shopping</a>
 
                             </div>
 
