--- a/src/main/resources/templates/front-header.html
+++ b/src/main/resources/templates/front-header.html
@@ -52,7 +52,7 @@
         <div class="container-fluid">
 
             <div class=" col-xs-8 col-sm-2 col-md-2 ">
-                <a class="fs-5 nav-link" href="/">Universes E-commerce </a>
+                <a class="fs-5 nav-link" href="/">Universes E-commerce</a>
 
             </div>
             <div class="col-xs-2 col-sm-1 col-md-1 d-none">
@@ -72,13 +72,10 @@
             </div> 
 
             <div class="col-xs-12 col-sm-5 col-md-5 m-2 m-sm-0">
-
-
                 <div class="input-group">
 
                     <div class="dropdown d-block d-sm-none">
                         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
-
                             <span class="navbar-toggler-icon"></span>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
@@ -87,12 +84,12 @@
                             <li><a class="dropdown-item" href="#">Action 3</a></li>
                         </ul>
                     </div>
-                    <select class="form-select d-none d-sm-block" style="width: 10%;" aria-label="Default select example">
+<!--                    <select class="form-select d-none d-sm-block" style="width: 10%;" aria-label="Default select example">
                         <option selected>All</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
-                    </select>
+                    </select>-->
                     <input type="text" class="form-control " placeholder="Search" aria-label="Username" aria-describedby="basic-addon1">
                     <button type="submit" class="btn btn-primary">Search</button>
                 </div>
@@ -104,7 +101,7 @@
                         <i class="bi bi-suit-heart bi-4x text-reds" style="font-size: 2rem;"> </i>
                     </div>
                     <div class="col text-center">
-                        <i class="bi bi-cart4 text-reds" style="font-size: 2rem;  "></i>
+                       <a th:href="@{/cart/index}"> <i class="bi bi-cart4 text-reds" style="font-size: 2rem;  "></i> </a>
                     </div>
                     <div class="col text-center">
                         <i class="bi bi-person" style="font-size: 2rem;"></i>
@@ -124,7 +121,6 @@
                     <div class="col text-center">
                         <a class= "nav-link"
                            th:href="@{/public/front-registration}">Register</a>
-
                     </div>
                 </div>
 
@@ -134,8 +130,6 @@
     </nav>
     <div class="row">
         <div class="col-md-12 col-sm-12 col-lg-12 text-center">
-
-
             <ul class=" list-inline">
                 <li class="list-inline-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
@@ -153,8 +147,6 @@
 
                 <li  class="list-inline-item">
                     <a class= "nav-link"  th:href="@{/customer/index}">Vendor</a> </li>
-
-
             </ul>
 
         </div>
