--- a/src/main/resources/templates/order/order/create.html
+++ b/src/main/resources/templates/order/order/create.html
@@ -22,7 +22,7 @@
                                 <div class="card-header" id="headingOne">
                                     <h2 class="mb-0">
                                         <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                           Checkout Options : Order Summary 
+                                            Checkout Options : Order Summary 
                                         </button>
                                     </h2>
                                 </div>
@@ -47,19 +47,19 @@
                                                     <tbody>
                                                         <tr th:each="cart,status:${session.sessioncart}">
                                                             <th>1</th>
-                                                            <td><a    class="card-link text-warning" th:href="@{/front-view/single-product/{prodid}(prodid=${cart.exam.id})}" >  <span  th:text="${cart.exam.title}">    </span> </a></td>
+                                                            <td><a    class="card-link text-warning" th:href="@{/front-view/single-product/{prodid}(prodid=${cart.product.id})}" >  <span  th:text="${cart.product.title}">    </span> </a></td>
 
-                                                            <td> <span th:if="${ not #strings.isEmpty(cart.exam.imageName)}" class="badge bg-green pull-right"> 
-                                                                    <img  class="img-responsive" th:src="@{/files/}+${cart.exam.imageName}" width="100px"  height="100px"/>
+                                                            <td> <span th:if="${ not #strings.isEmpty(cart.product.imageName)}" class="badge bg-green pull-right"> 
+                                                                    <img  class="img-responsive" th:src="@{/files/}+${cart.product.imageName}" width="100px"  height="100px"/>
                                                                 </span>
 
-                                                                <span th:if="${#strings.isEmpty(cart.exam.imageName)}" > Image Not Found </span></td>
+                                                                <span th:if="${#strings.isEmpty(cart.product.imageName)}" > Image Not Found </span></td>
 
-                                                            <td th:text="${cart.exam.price}">Otto</td>
+                                                            <td th:text="${cart.product.salesPrice}">Otto</td>
 
                                                             <td th:text="${cart.quantity}">Otto</td>
                                                             <td>
-                                                                <div th:with="result=${cart.exam.price * cart.quantity}">
+                                                                <div th:with="result=${cart.product.salesPrice * cart.quantity}">
 
                                                                     <span th:text="${#numbers.formatDecimal(result, 0, 'COMMA', 2, 'POINT')}">10.00</span> 
 
@@ -70,7 +70,7 @@
                                                     </tbody>
                                                 </table>
 
-                                             
+
 
                                                 <div class="card">
                                                     <div class="card-header">
