--- a/src/main/resources/templates/order/order/order_details.html
+++ b/src/main/resources/templates/order/order/order_details.html
@@ -55,9 +55,9 @@ and open the template in the editor.
                                     <ul class="list-group list-group-flush">
                                         <li class="list-group-item">Order Status :<span th:text="${orderdetails.status}"></span></li>
                                         <li class="list-group-item"> 
-                                        
-                                        <a type="button" class="btn btn-danger" th:href="@{/order/statuschange/{oid}(oid=${orderdetails.id})}">    Order Complete </a>
-                                        
+
+                                            <a type="button" class="btn btn-danger" th:href="@{/order/statuschange/{oid}(oid=${orderdetails.id})}">    Order Complete </a>
+
                                         </li>
 
                                     </ul>
@@ -77,20 +77,22 @@ and open the template in the editor.
                                             <tr>
                                                 <th scope="col">#</th>
                                                 <th scope="col">Sales Order</th>
-                                                <th scope="col">Exam Title</th>
+                                                <th scope="col"> Item Title</th>
                                                 <th scope="col">Price</th>
                                             </tr>
                                         </thead>
+
                                         <tbody>
                                             <tr th:each="orderItems,status:${orderdetails.orderItem}">
                                                 <td><span th:text="${orderItems.id}"></span></td>
                                                 <td><span th:text="${orderItems.salesOrder.id}"></span></td>
-                                                <td><span th:text="${orderItems.exam.title}"></span></td>
-                                                <td><span th:text="${orderItems.exam.price}"></span></td>
+                                                <td><span th:text="${orderItems.product.title}"></span></td>
+                                                <td><span th:text="${orderItems.product.salesPrice}"></span></td>
                                             </tr>
                                         </tbody>
                                     </table>
 
+                                    
                                     <table class="table table-bordered" th:if="${ #lists.isEmpty(orderdetails.orderItem)}">
                                         <tr>
                                             <td> Sorry no order found ! </td>
